<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_info">App info.</string>
    <string name="todo">TODO</string>
    <string name="original_title">Original Title</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="seasons">Seasons</string>
</resources>